--- a/src/clipitch/clipssemana.html
+++ b/src/clipitch/clipssemana.html
@@ -1,220 +1,165 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="utf-8" />
 
-    <meta
-      name="author"
-      content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro"
-    />
-    <meta
-      name="keywords"
-      content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media"
-    />
-    <meta
-      name="description"
-      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
-    />
-    <meta name="robots" content="index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Clips da semana</title>
+  <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
+  <meta name="keywords"
+    content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
+  <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="imgs/apple-touch-icon."
-    />
+  <title>Clips da semana</title>
 
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="Clipitch" />
-    <meta
-      property="og:description"
-      content="Clips do dia e semana do Twitch.tv"
-    />
-    <meta property="og:url" content="https://clipitch.herokuapp.com/" />
-    <meta
-      property="og:image"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <meta property="og:image:witdth" content="600" />
-    <meta property="og:image:height" content="800" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Clipitch" />
-    <meta property="og:locale" content="pt-br" />
-    <!-- /Open Graph Tags -->
+  <!-- Favicon -->
+  <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon." />
 
-    <!-- Twitter Tags -->
-    <meta property="twitter:card" content="Imagem Larga" />
-    <meta
-      property="twitter:url"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <meta
-      property="twitter:title"
-      content="Clips do dia e semana do Twitch.tv"
-    />
-    <meta
-      property="twitter:description"
-      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
-    />
-    <meta
-      property="twitter:image"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <!-- /Twitter Tags -->
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Clipitch" />
+  <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
+  <meta property="og:url" content="https://clipitch.herokuapp.com/" />
+  <meta property="og:image" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <meta property="og:image:witdth" content="600" />
+  <meta property="og:image:height" content="800" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Clipitch" />
+  <meta property="og:locale" content="pt-br" />
+  <!-- /Open Graph Tags -->
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+  <!-- Twitter Tags -->
+  <meta property="twitter:card" content="Imagem Larga" />
+  <meta property="twitter:url" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+  <meta property="twitter:description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+  <meta property="twitter:image" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <!-- /Twitter Tags -->
 
-    <!-- FontAwesome CSS -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+  <!-- FontAwesome CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
-    <!-- Estilo CSS -->
-    <link href="css/style.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap" rel="stylesheet" />
 
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Estilo CSS -->
+  <link href="css/style.css" rel="stylesheet" />
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Pooper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- FontAwesome JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+  <!-- Pooper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 
-    <!--Script JS-->
-    <script src="js/script.js" type="module"></script>
+  <!-- FontAwesome JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 
-    <!--Script JS-->
-    <script src="js/search.js" type="module"></script>
+  <!--Script JS-->
+  <script src="js/script.js" type="module"></script>
 
-    <!--Script JS-->
-    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
-  </head>
+  <!--Script JS-->
+  <script src="js/search.js" type="module"></script>
 
-  <body>
-    <header class="section">
-      <!-- Nav bar -->
-      <nav class="navbar navbar-expand-lg bg-custom">
-        <div class="container">
-          <a
-            class="navbar-brand js-scroll-trigger"
-            href="/src/clipitch/index.html"
-            ><img class="nav-image"
-          /></a>
-          <button
-            class="
+  <!--Script JS-->
+  <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+</head>
+
+<body>
+  <header class="section">
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-custom">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="/src/clipitch/index.html"><img class="nav-image" /></a>
+        <button class="
               navbar-toggler navbar-toggler-right
               shadow-none
               border-0
               text-white
-            "
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarResponsive"
-            aria-controls="navbarResponsive"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"
-              ><i class="fas fa-bars ml-1"></i
-            ></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link js-scroll-trigger"
-                  href="/src/clipitch/clipsdia.html"
-                  >Clips do dia</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link js-scroll-trigger"
-                  href="/src/clipitch/clipssemana.html"
-                  >Clips da semana</a
-                >
-              </li>
-              <li class="nav-item">
-                <div class="input-group">
-                  <div class="form-outline">
-                    <input
-                      type="text"
-                      id="searchValue"
-                      placeholder="Pesquisar... "
-                      class="form-control shadow-none border-0"
-                    />
-                  </div>
-                  <button
-                    id="search-button"
-                    type="button"
-                    class="btn btn-close-white shadow-none"
-                  >
-                    <i class="fas fa-search"></i>
-                  </button>
+            " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars ml-1"></i></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipsdia.html">Clips do dia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipssemana.html">Clips da semana</a>
+            </li>
+            <li class="nav-item">
+              <div class="input-group">
+                <div class="form-outline">
+                  <input type="text" id="searchValue" placeholder="Pesquisar... "
+                    class="form-control shadow-none border-0" />
                 </div>
-              </li>
-            </ul>
-          </div>
+                <button id="search-button" type="button" class="btn btn-close-white shadow-none">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </li>
+          </ul>
         </div>
-      </nav>
-      <br />
-      <!-- /Nav bar -->
-    </header>
+      </div>
+    </nav>
+    <br />
+    <!-- /Nav bar -->
+  </header>
 
-    <!-- Galeria de vídeos do dia -->
-    <div class="section">
-      <div class="section" id="clipsDia">
-        <div class="container">
-          <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
-          <hr class="my-4" />
-        </div>
-        <div class="container">
-          <div class="row" id="rowWeeklyPage"></div>
+  <!-- Galeria de vídeos do dia -->
+  <div class="section">
+    <div class="section" id="clipsDia">
+      <div class="container">
+        <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
+        <hr class="my-4" />
+      </div>
+      <div class="container">
+        <div class="row" id="rowWeeklyPage"></div>
+        <br />
+        <a class="btn btn-warning" type="button" role="button" onclick="window.history.back();"><i
+            class="fas fa-backward"></i>&nbsp;Voltar</a>
+        <br /><br />
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal">
+    <!-- Conteúdo do Modal -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <div id="modal-body"></div>
+      </div>
+      <div class="modal-footer">
+        <div id="modal-footer"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Rodapé -->
+  <footer class="bg-custom py-4">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-lg-4 text-lg-left">
+          Copyright © - Clipitch
           <br />
-          <a
-            class="btn btn-warning"
-            type="button"
-            role="button"
-            onclick="window.history.back();"
-            ><i class="fas fa-backward"></i>&nbsp;Voltar</a
-          >
-          <br /><br />
+          <small>&copy; Todos os direitos reservados.</small>
         </div>
       </div>
     </div>
+  </footer>
+  <!-- /Rodapé -->
+</body>
 
-    <!-- Rodapé -->
-    <footer class="bg-custom py-4">
-      <div class="container">
-        <div class="row align-items-center text-white">
-          <div class="col-lg-4 text-lg-left">
-            Copyright © - Clipitch
-            <br />
-            <small>&copy; Todos os direitos reservados.</small>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- /Rodapé -->
-  </body>
 </html>
