--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -1,301 +1,223 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="utf-8" />
 
-    <meta
-      name="author"
-      content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro"
-    />
-    <meta
-      name="keywords"
-      content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media"
-    />
-    <meta
-      name="description"
-      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
-    />
-    <meta name="robots" content="index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Clipitch</title>
+  <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
+  <meta name="keywords"
+    content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
+  <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="imgs/apple-touch-icon."
-    />
+  <title>Clipitch</title>
 
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="Clipitch" />
-    <meta
-      property="og:description"
-      content="Clips do dia e semana do Twitch.tv"
-    />
-    <meta property="og:url" content="https://clipitch.herokuapp.com/" />
-    <meta
-      property="og:image"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <meta property="og:image:witdth" content="600" />
-    <meta property="og:image:height" content="800" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Clipitch" />
-    <meta property="og:locale" content="pt-br" />
-    <!-- /Open Graph Tags -->
+  <!-- Favicon -->
+  <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon." />
 
-    <!-- Twitter Tags -->
-    <meta property="twitter:card" content="Imagem Larga" />
-    <meta
-      property="twitter:url"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <meta
-      property="twitter:title"
-      content="Clips do dia e semana do Twitch.tv"
-    />
-    <meta
-      property="twitter:description"
-      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
-    />
-    <meta
-      property="twitter:image"
-      content="https://clipitch.herokuapp.com/imgs/logo.png"
-    />
-    <!-- /Twitter Tags -->
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Clipitch" />
+  <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
+  <meta property="og:url" content="https://clipitch.herokuapp.com/" />
+  <meta property="og:image" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <meta property="og:image:witdth" content="600" />
+  <meta property="og:image:height" content="800" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Clipitch" />
+  <meta property="og:locale" content="pt-br" />
+  <!-- /Open Graph Tags -->
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+  <!-- Twitter Tags -->
+  <meta property="twitter:card" content="Imagem Larga" />
+  <meta property="twitter:url" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+  <meta property="twitter:description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+  <meta property="twitter:image" content="https://clipitch.herokuapp.com/imgs/logo.png" />
+  <!-- /Twitter Tags -->
 
-    <!-- FontAwesome CSS -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+  <!-- FontAwesome CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
-    <!-- Estilo CSS -->
-    <link href="css/style.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap" rel="stylesheet" />
 
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Estilo CSS -->
+  <link href="css/style.css" rel="stylesheet" />
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Pooper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- FontAwesome JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+  <!-- Pooper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 
-    <!--Script JS-->
-    <script src="js/script.js" type="module"></script>
-  </head>
+  <!-- FontAwesome JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 
-  <body>
-    <header class="masthead">
-      <!-- Nav bar -->
-      <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
-        <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#"
-            ><img class="nav-image"
-          /></a>
-          <button
-            class="
+  <!--Script JS-->
+  <script src="js/script.js" type="module"></script>
+</head>
+
+<body>
+  <header class="masthead">
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#"><img class="nav-image" /></a>
+        <button class="
               navbar-toggler navbar-toggler-right
               shadow-none
               border-0
               text-white
-            "
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarResponsive"
-            aria-controls="navbarResponsive"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"
-              ><i class="fas fa-bars ml-1"></i
-            ></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#clipsDia"
-                  >Clips do dia</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#clipsSemana"
-                  >Clips da semana</a
-                >
-              </li>
-              <li class="nav-item">
-                <div class="input-group">
-                  <div class="form-outline">
-                    <input
-                      type="text"
-                      id="searchValue"
-                      placeholder="Pesquisar... "
-                      class="form-control shadow-none border-0"
-                    />
-                  </div>
-                  <button
-                    id="search-button"
-                    type="button"
-                    class="btn btn-close-white shadow-none"
-                  >
-                    <i class="fas fa-search"></i>
-                  </button>
+            " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars ml-1"></i></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#clipsDia">Clips do dia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#clipsSemana">Clips da semana</a>
+            </li>
+            <li class="nav-item">
+              <div class="input-group">
+                <div class="form-outline">
+                  <input type="text" id="searchValue" placeholder="Pesquisar... "
+                    class="form-control shadow-none border-0" />
                 </div>
-              </li>
-            </ul>
-          </div>
+                <button id="search-button" type="button" class="btn btn-close-white shadow-none">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </li>
+          </ul>
         </div>
-      </nav>
-      <br />
-      <!-- /Nav bar -->
-
-      <!-- Carrossel -->
-      <div class="container text-white textoPrincipal">
-        <h1>Selecionados do dia</h1>
-        <hr class="my-4 text-white" style="height: 2px" />
       </div>
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="container">
-          <div class="carousel-inner" id="carouselInner"></div>
-        </div>
-        <br /><br />
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden"></span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden"></span>
-        </button>
-      </div>
-      <!-- /Carrossel -->
-    </header>
-
-    <!-- Sistema de tags -->
-    <div class="section bg-warning">
-      <ul class="list-group list-group-horizontal-md" id="tagsDiv"></ul>
-    </div>
-
-    <!-- /Sistema de tags -->
-
-    <!-- Galeria de vídeos do dia -->
-    <div class="section" id="clipsDia">
-      <div class="container">
-        <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
-        <hr class="my-4" />
-      </div>
-      <div class="container">
-        <div class="row" id="rowDaily"></div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="text-end">
-        <a
-          href="/src/clipitch/clipsdia.html"
-          class="btn btn-warning"
-          role="button"
-          aria-pressed="true"
-          id="btnOptions"
-          >Ver mais</a
-        >
-      </div>
-    </div>
-    <!-- /Galeria de vídeos do dia -->
-
-    <!-- Galeria de vídeos da semana -->
-    <div class="section" id="clipsSemana">
-      <div class="container">
-        <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
-        <hr class="my-4" />
-      </div>
-      <div class="container">
-        <div class="row" id="rowWeekly"></div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="text-end">
-        <a
-          href="/src/clipitch/clipssemana.html"
-          class="btn btn-warning"
-          role="button"
-          aria-pressed="true"
-          id="btnOptions"
-          >Ver mais</a
-        >
-      </div>
-    </div>
+    </nav>
     <br />
-    <!-- /Galeria de vídeos da semana -->
-  </body>
+    <!-- /Nav bar -->
 
-  <!-- Rodapé -->
-  <footer class="bg-custom py-4">
+    <!-- Carrossel -->
+    <div class="container text-white textoPrincipal">
+      <h1>Selecionados do dia</h1>
+      <hr class="my-4 text-white" style="height: 2px" />
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="container">
+        <div class="carousel-inner" id="carouselInner"></div>
+      </div>
+      <br /><br />
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+    </div>
+    <!-- /Carrossel -->
+  </header>
+
+  <!-- Sistema de tags -->
+  <div class="section bg-warning">
+    <ul class="list-group list-group-horizontal-md" id="tagsDiv"></ul>
+  </div>
+
+  <!-- /Sistema de tags -->
+
+  <!-- Galeria de vídeos do dia -->
+  <div class="section" id="clipsDia">
     <div class="container">
-      <div class="row align-items-center text-white">
-        <div class="col-lg-4 text-lg-left">
-          Copyright © - Clipitch
-          <br />
-          <small>&copy; Todos os direitos reservados.</small>
-        </div>
+      <h2 class="nav-link textoTitulo" href="#">Clips do dia</h2>
+      <hr class="my-4" />
+    </div>
+    <div class="container">
+      <div class="row" id="rowDaily"></div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="text-end">
+      <a href="/src/clipitch/clipsdia.html" class="btn btn-warning" role="button" aria-pressed="true"
+        id="btnOptions">Ver mais</a>
+    </div>
+  </div>
+  <!-- /Galeria de vídeos do dia -->
+
+  <!-- Galeria de vídeos da semana -->
+  <div class="section" id="clipsSemana">
+    <div class="container">
+      <h2 class="nav-link textoTitulo" href="#">Clips da semana</h2>
+      <hr class="my-4" />
+    </div>
+    <div class="container">
+      <div class="row" id="rowWeekly"></div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="text-end">
+      <a href="/src/clipitch/clipssemana.html" class="btn btn-warning" role="button" aria-pressed="true"
+        id="btnOptions">Ver mais</a>
+    </div>
+  </div>
+  <br />
+  <!-- /Galeria de vídeos da semana -->
+
+  <!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- Modal -->
+<div id="myModal" class="modal">
+  <!-- Conteúdo do Modal -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+    </div>
+    <div class="modal-body">
+      <div id="modal-body"></div>
+    </div>
+    <div class="modal-footer">
+      <div id="modal-footer"></div>
+    </div>
+  </div>
+</div>
+
+</body>
+
+<!-- Rodapé -->
+<footer class="bg-custom py-4">
+  <div class="container">
+    <div class="row align-items-center text-white">
+      <div class="col-lg-4 text-lg-left">
+        Copyright © - Clipitch
+        <br />
+        <small>&copy; Todos os direitos reservados.</small>
       </div>
     </div>
-  </footer>
-  <!-- /Rodapé -->
+  </div>
+</footer>
+<!-- /Rodapé -->
+
 </html>
